--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -11,7 +11,7 @@
   when: ansible_distribution == 'Ubuntu' and ansible_distribution_version == '15.04'
 
 - name: Add Docker PPA
-  apt_repository: repo='deb https://apt.dockerproject.org/repo ubuntu-wiley main' update_cache=yes
+  apt_repository: repo='deb https://apt.dockerproject.org/repo ubuntu-wily main' update_cache=yes
   when: ansible_distribution == 'Ubuntu' and ansible_distribution_version == '15.10'
 
 - name: Install Docker
